[package]
name = "prisma-usecase"
version = "0.1.0"
edition = "2021"
default-run = "prisma-usecase"

[workspace]
members = ["prisma-cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4" }
serde = "1.0.152"
tokio = "1.23.0"
chrono = "0.4.23"
rand = "0.8.5"
faker_rand = "0.1.1"
dotenv = "0.15.0"
